<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_home"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/menu_title_item_home" />
    </group>

    <item android:title="Configuration">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_item_new_player"
                    android:icon="@drawable/baseline_home_black_24dp"
                    android:title="@string/menu_title_item_new_player"
                    />
                <item
                    android:id="@+id/menu_item_settings"
                    android:icon="@drawable/baseline_home_black_24dp"
                    android:title="@string/menu_title_item_settings" />
            </group>
        </menu>
    </item>

</menu>