<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_marginVertical="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="10sp"
        android:scaleType="centerCrop"
        android:src="@drawable/roger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.40" />

    <View
        android:id="@+id/circle_dashed"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintDimensionRatio="1:1"

        android:background="@drawable/circle"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        />

    <LinearLayout
        android:id="@+id/layout_wrapper_header_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"

        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_image"

        app:layout_constraintTop_toTopOf="@id/profile_image">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_name_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="25dp"
            android:maxLines="1"
            android:text="@string/profile_card_default_name"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginVertical="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/profile_card_default_rank"

            android:textColor="@color/text_dark"
            style="@style/TextAppearance.AppCompat.Medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginVertical="5dp"
            android:layout_marginStart="20dp"

            android:text="@string/profile_card_default_age"
            android:textColor="@color/text_dark"
            style="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>