<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/manage_profile_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.fragments.ManageProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent_primary">

    <!-- Header -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/manage_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/header_vertical_margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/manage_profile_body_wrapper"

        android:text="@string/manage_profile_title_new"
        android:textAlignment="center"
        android:textColor="@color/text_dark"
        android:textStyle="bold"
        style="@style/TextAppearance.MaterialComponents.Headline5"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/manage_profile_body_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/list_wrapper">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/manage_profile_btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/manage_profile_btn_delete"

            app:layout_constraintTop_toTopOf="@id/manage_profile_image"
            app:layout_constraintStart_toEndOf="@id/manage_profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/manage_profile_image"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/manage_profile_body_wrapper"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.4"
            android:layout_marginVertical="30dp"

            android:src="@drawable/default_profile"
            android:scaleType="centerCrop"
            />
        <View
            android:id="@+id/manage_profile_dashed_circle"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintTop_toTopOf="@id/manage_profile_image"
            app:layout_constraintBottom_toBottomOf="@id/manage_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHorizontal_bias="0.47"

            android:background="@drawable/circle"
            />
        <View
            android:id="@+id/manage_profile_icon_camera"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintTop_toTopOf="@id/manage_profile_image"
            app:layout_constraintBottom_toBottomOf="@id/manage_profile_image"
            app:layout_constraintEnd_toEndOf="@id/manage_profile_image"

            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintDimensionRatio="5:4"
            android:background="@drawable/camera"
            />

        <!-- Fields -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/manage_profile_field_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:inputType="textPersonName"
            android:paddingHorizontal="20dp"

            android:tag="new_profile_tag_name"

            app:layout_constraintStart_toEndOf="@id/manage_profile_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/manage_profile_name"
            app:layout_constraintBottom_toBottomOf="@id/manage_profile_name"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="70dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/manage_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:inputType="textPersonName"
            android:layout_marginVertical="50dp"

            android:text="@string/manage_profile_placeholder_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_dark"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/manage_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="70dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/manage_profile_field_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:inputType="number"

            android:paddingHorizontal="20dp"
            android:tag="new_profile_tag_rank"

            app:layout_constraintTop_toTopOf="@id/manage_profile_rank"
            app:layout_constraintBottom_toBottomOf="@id/manage_profile_rank"
            app:layout_constraintStart_toEndOf="@id/manage_profile_rank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintWidth_percent="0.15"
            android:layout_marginStart="10dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/manage_profile_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/manage_profile_placeholder_rank"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_dark"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/manage_profile_name"
            app:layout_constraintTop_toBottomOf="@id/manage_profile_name"
            android:layout_marginTop="50dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/manage_profile_field_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:inputType="number"

            android:paddingHorizontal="20dp"
            android:tag="new_profile_tag_age"

            app:layout_constraintEnd_toEndOf="@id/manage_profile_field_name"
            app:layout_constraintTop_toTopOf="@id/manage_profile_field_rank"
            app:layout_constraintWidth_percent="0.15" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/manage_profile_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/manage_profile_placeholder_age"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_dark"
            android:textStyle="bold"

            app:layout_constraintEnd_toStartOf="@id/manage_profile_field_age"
            app:layout_constraintTop_toTopOf="@id/manage_profile_field_age"
            app:layout_constraintBottom_toBottomOf="@id/manage_profile_field_age"
            android:layout_marginEnd="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/manage_profile_btn_action"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:layout_marginTop="100dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:text="@string/manage_profile_btn_action_new_profile"
            android:textColor="@color/colorPrimary"
            android:enabled="false"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintDimensionRatio="3:1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>